--- a/package.json
+++ b/package.json
@@ -1,21 +1,56 @@
 {
-    "name": "webtools",
-    "version": "1.0.0",
-    "main": "server.js",
-    "scripts": {
-        "start": "node server.js",
-        "dev": "nodemon server.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [],
-    "author": "Tanese",
-    "license": "GPL-3.0-only",
-    "description": "A simple assortment of web tools that I made.",
-    "dependencies": {
-        "axios": "^1.8.1",
-        "cors": "^2.8.5",
-        "dotenv": "^16.4.7",
-        "express": "^4.21.2",
-        "nodemon": "^3.1.9"
-    }
+	"name": "webtools-react",
+	"version": "1.0.0",
+	"private": true,
+	"dependencies": {
+		"@testing-library/dom": "^10.4.0",
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/react": "^16.3.0",
+		"@testing-library/user-event": "^13.5.0",
+		"crypto-js": "^4.2.0",
+		"js-yaml": "^4.1.0",
+		"jszip": "^3.10.1",
+		"marked": "^15.0.12",
+		"papaparse": "^5.5.3",
+		"qrcode": "^1.5.4",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
+		"react-router-dom": "^7.6.0",
+		"react-scripts": "^5.0.1",
+		"to-ico": "^1.0.1",
+		"web-vitals": "^2.1.4"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"assert": "^2.1.0",
+		"browserify-zlib": "^0.2.0",
+		"buffer": "^6.0.3",
+		"customize-cra": "^1.0.0",
+		"react-app-rewired": "^2.2.1",
+		"stream-browserify": "^3.0.0",
+		"util": "^0.12.5"
+	}
 }
