--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "webtools-react",
-	"version": "1.0.1",
+	"version": "1.0.2",
 	"private": true,
 	"dependencies": {
 		"@testing-library/dom": "^10.4.0",
@@ -18,6 +18,7 @@
 		"react-router-dom": "^7.6.0",
 		"react-scripts": "^5.0.1",
 		"to-ico": "^1.0.1",
+		"uuid": "^11.1.0",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
