--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@testing-library/react": "^16.3.0",
 		"@testing-library/user-event": "^13.5.0",
 		"crypto-js": "^4.2.0",
+		"fuse.js": "^7.1.0",
 		"js-yaml": "^4.1.0",
 		"jszip": "^3.10.1",
 		"marked": "^15.0.12",
